# rainy-notification

./: .gitignore  CMakeLists.txt  README.md  main.cpp  notification.hpp  wintoastlib.cpp
include/: rainy_notification.hpp
scr/: rainy_notification.cpp
src/: rainy_notification.cpp
